compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__assigned_function_annotation.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 296
expression: "let f = fn(x: Int) { x } f(1.0)"
snapshot_kind: text
---
----- SOURCE CODE
let f = fn(x: Int) { x } f(1.0)

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:28
  │
1 │ let f = fn(x: Int) { x } f(1.0)
  │                            ^^^

Expected type:

    Int

Found type:

    Float
